(Altera config para funcionar em varios apps)

--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -7,7 +7,8 @@
             "platformName": "Android",
             "appium:platformVersion": "13",
             "appium:deviceName": "AppiumAVD",
-            "appium:automationName": "UiAutomator2"
+            "appium:automationName": "UiAutomator2",
+            "appium:autoGrantPermissions": true
           },
           "keep-alive-timeout": 600,
           "local-timezone": true,
