--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@appium/images-plugin": "^2.1.7",
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.5",
     "@wdio/allure-reporter": "^8.24.0",
     "@wdio/appium-service": "^8.21.0",
     "@wdio/local-runner": "^8.21.0",
     "@wdio/mocha-framework": "^8.21.0",
-    "@wdio/spec-reporter": "^8.21.0",
     "allure-commandline": "^2.24.1",
     "appium": "^2.2.2",
     "appium-gestures-plugin": "^3.0.0",
