(Arruma a config da pasta tmp)

--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -6,8 +6,8 @@
         "keep-alive-timeout": 600,
         "debug-log-spacing": true,
         "local-timezone": true,
-        "tmp": "/tmp",
-        "log": "/tmp/appium.log",
+        "tmp": "./tmp",
+        "log": "./tmp/appium.log",
         "log-level": "info",
         "log-no-colors": false,
         "log-timestamp": true,
