--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+# ignorar node packages
 node_modules
 
-# Ignorar pasta allure-results
+# Ignorar pastas allure reporter
 allure-results
 allure-report
 
-# tmp folder
+# Ignorar pasta TMP
 tmp
+
+# Ignorar  Condiguração do VSCode User
+.vscode
