--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     appium_test:
-        runs-on: macos-latest
+        runs-on: ubuntu-latest
 
         steps:
 
@@ -45,16 +45,14 @@ jobs:
             sleep 1
             done
 
-        - name: Rode os testes do Appium
-          uses: reactivecircus/android-emulator-runner@v2.28.0
-          with:
-            api-level: 33
-            target: default
-            cores: 4
-            arch: x86_64
-            sdcard-path-or-size: 1500M
-            ram-size: 9128M
-            heap-size: 2048M
-            disable-animations: true
-            disable-spellchecker: true
-            script: npm test
+        - name: Configuração do Emulador
+          run: |
+              echo 'y' | sdkmanager --install "system-images;android-33;google_apis;x86_64"
+              echo 'no' | avdmanager --verbose create avd --force --name test --package "system-images;android-33;google_apis;x86_64" --abi google_apis/x86_64
+              emulator -avd test -no-window -no-audio -no-boot-anim -no-jni -camera-back none -camera-front none -selinux permissive -qemu -m 2048 &
+
+        - name: Esperar pelo Emulador
+          run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
+
+        - name: Executar Testes
+          run: npm test:all
