(Teste CI Novo 03)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,7 @@ jobs:
             done
 
         - name: Configuração do Emulador
-          run: |
-              echo 'y' | sdkmanager --install "system-images;android-33;google_apis;x86_64"
-              echo 'no' | avdmanager --verbose create avd --force --name test --package "system-images;android-33;google_apis;x86_64" --abi google_apis/x86_64
-              emulator -avd test -no-window -no-audio -no-boot-anim -no-jni -camera-back none -camera-front none -selinux permissive -qemu -m 4096 &
+          run: chmod +x ./scripts/emulator.sh && ./scripts/emulator.sh
 
         - name: Esperar pelo Emulador
           run: adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
