--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,12 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3
 
-        - name: Cachear dependencias
-          uses: actions/cache@v2
-          with:
-            path: |
-              ~/.npm
-              ~/.android
-              # Adicione outros caminhos que você deseja cache aqui
-            key: ${{ runner.os }}-node-${{ hashFiles('**/*.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-node-
+        - name: Set Environment Variable
+          run: echo "GITHUB_ACTIONS=true" >> $GITHUB_ENV
+
+        - name: Setar o usuário no grupo KVM
+          run: |
+            sudo gpasswd -a $USER kvm
 
         - name: Configurar Node.js
           uses: actions/setup-node@v3
