--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -6,22 +6,20 @@
         "keep-alive-timeout": 600,
         "debug-log-spacing": true,
         "local-timezone": true,
-        "tmp": "./tmp",
-        "log": "./tmp/appium.log",
         "log-level": "info",
         "log-no-colors": false,
         "log-timestamp": true,
         "long-stacktrace": false,
         "no-perms-check": true,
-        "use-drivers": ["UiAutomator2"],
+        "use-drivers": ["uiautomator2"],
         "use-plugins": ["images", "gestures"],
         "default-capabilities": {
             "platformName": "Android",
-            "appium:automationName": "UiAutomator2",
+            "appium:automationName": "uiautomator2",
             "appium:autoGrantPermissions": true,
             "appium:noReset": false,
             "appium:autoLaunch": true,
-            "appium:newCommandTimeout": 300
+            "appium:newCommandTimeout": 3600
         }
     }
 }
