--- a/package.json
+++ b/package.json
@@ -4,36 +4,38 @@
   "description": "Project create for Studying Framework Appium with JS",
   "main": "index.js",
   "scripts": {
-    "ci": "npm ci",
     "start": "appium --config .appiumrc.json",
-    "test:all": "npm run test:demoapp && npm run test:productapp && npm run relatory",
-    "test:demoapp": "cross-env APP_ENV=demoapp wdio run ./wdio.conf.js --spec",
-    "test:productapp": "cross-env APP_ENV=productapp wdio run ./wdio.conf.js --spec",
+    "clean:allure": "rimraf allure-results",
+    "test:all": "npm run clean:allure && npm run test:demoapp && npm run test:productapp && npm run relatory",
+    "test:demoapp": "cross-env APP_ENV=demoapp wdio run ./wdio.conf.ts --spec",
+    "test:productapp": "cross-env APP_ENV=productapp wdio run ./wdio.conf.ts --spec",
     "relatory": "allure generate allure-results --clean",
-    "relatory:open": "allure open"
+    "relatory:open": "allure open",
+    "wdio": "wdio run ./wdio.conf.ts"
   },
   "author": "Leonardo Paixão",
   "license": "MIT",
   "dependencies": {
-    "@wdio/cli": "^8.21.0",
-    "dotenv": "^16.3.1",
-    "webdriverio": "^8.21.0"
+    "@wdio/cli": "^9.0.9",
+    "dotenv": "^16.4.5",
+    "rimraf": "^6.0.1",
+    "webdriverio": "^9.0.9"
   },
   "devDependencies": {
-    "@appium/images-plugin": "^2.1.7",
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.5",
-    "@wdio/allure-reporter": "^8.24.0",
-    "@wdio/appium-service": "^8.21.0",
-    "@wdio/local-runner": "^8.21.0",
-    "@wdio/mocha-framework": "^8.21.0",
-    "allure-commandline": "^2.24.1",
-    "appium": "^2.2.2",
-    "appium-gestures-plugin": "^3.0.0",
-    "appium-uiautomator2-driver": "^2.34.1",
+    "@appium/images-plugin": "^3.0.18",
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@wdio/allure-reporter": "^9.0.8",
+    "@wdio/appium-service": "^9.0.9",
+    "@wdio/local-runner": "^9.0.9",
+    "@wdio/mocha-framework": "^9.0.8",
+    "allure-commandline": "^2.30.0",
+    "appium": "^2.11.3",
+    "appium-gestures-plugin": "^4.0.1",
+    "appium-uiautomator2-driver": "^3.7.10",
     "lodash": "^4.17.21",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
