alguns ajustes no projeto

--- a/.appiumrc.json
+++ b/.appiumrc.json
@@ -8,8 +8,8 @@
         "local-timezone": true,
         "log-level": "info",
         "log-no-colors": false,
-        "log-timestamp": true,
-        "long-stacktrace": false,
+        "log-timestamp": false,
+        "long-stacktrace": true,
         "no-perms-check": true,
         "use-drivers": ["uiautomator2"],
         "use-plugins": ["images", "gestures"],
